--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Start">
+        <activity android:name=".Activity.Start.Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
