--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,24 +22,26 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
-        android:name=".GlobalVariable.Global"
+        android:name=".WeChatApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.Start.Start">
+        <activity
+            android:name=".Activity.Start.Start"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity.Login_Register.Register" />
+        <activity android:name=".Activity.MainActivity.MainActivity"></activity>
 
-        <activity android:name=".Activity.Login_Register.Register">
-
-        </activity>
+        <activity android:name=".Activity.Login_Register.ChatActivity.ChatActivity"></activity>
     </application>
 
 </manifest>
