--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,19 +30,25 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activity.Start.Start"
-            android:launchMode="singleInstance">
+            android:name=".Activity.Start.Start">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.Login_Register.Register" />
-        <activity android:name=".Activity.MainActivity.MainActivity"></activity>
+        <activity android:name=".Activity.Login_Register.Register"
+            android:launchMode="singleTask"/>
 
-        <activity android:name=".Activity.ChatActivity.ChatActivity"
-            android:label="多人聊天室"></activity>
+        <activity android:name=".Activity.MainActivity.MainActivity"
+            android:launchMode="singleTask"/>
+        <activity
+            android:name=".Activity.ChatActivity.ChatActivity"
+            android:launchMode="singleTask"
+            android:label="多人聊天室" />
+        <activity android:name=".Activity.Login_Register.Login"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize"></activity>
     </application>
 
 </manifest>
